[metadata]
name = aleducutilities
version = 1.0.2
author = Alexis DUCREUX
author_email = 
description = Utilities file for Python scripts
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
